# fibo-autodirector-agent

./: .env.example  .gitignore  README.md
apps/api/: pyproject.toml
apps/api/src/api/: __init__.py  config.py  fibo_provider.py  hashutil.py  main.py  models.py  routes.py  rules.py  storage.py  worker.py
apps/api/tests/: test_explain.py
data/samples/: products.csv
docs/: ARCHITECTURE.md  smoke-test.md
docs/real-fibo-example/: README.md  backend_bria_request.json  backend_bria_response.json  backend_bria_response_cached.json  bria_request.json  bria_response.json  explain.json  shot.json  structured_prompt.json
